fix positioning of login button so it doesn't overlap with documents

--- a/css/styles.css
+++ b/css/styles.css
@@ -48,7 +48,8 @@ i {
     top: 33px;
 }
 #doc-panel {
-    overflow: hidden;
+    overflow: scroll;
+    height: 100%;
     flex: 0 0 auto;
     width: 0px;
     margin-bottom: 8px;
@@ -56,6 +57,8 @@ i {
     border-radius: 6px;
     position: relative;
     border: 3px solid transparent;
+    display: flex;
+    flex-direction: column;
 }
 
 #doc-title {
@@ -251,10 +254,12 @@ i {
 
 }
 #firebaseui-auth-container {
-    position: absolute;
-    bottom: 25px;
+    margin-top: auto;
+    padding-bottom: 5px;
+    padding-top: 5px;
     white-space: nowrap;
     width: 100%;
+    background-color: white;
 }
  
   /* Icon 1 */
